--- a/shop/index.html
+++ b/shop/index.html
@@ -27,8 +27,10 @@
     </div>
     <input id="searchInput" class="search" placeholder="Search titre/tags..." />
   </section>
-
-  <main>
+</main>
+<bouton id="resetFilters"
+class="btn">reset</boutton>
+  
     <div id="grid" class="grid"></div>
     <p id="empty" class="empty" hidden>Tsisy produits.</p>
   </main>
