--- a/shop/index.html
+++ b/shop/index.html
@@ -25,10 +25,13 @@
       <button class="chip" data-filter="promo">Promo</button>
       <button class="chip" data-filter="vip">VIP</button>
     </div>
-    <input id="searchInput" class="search" placeholder="Search titre/tags..." />
+    <div class="inline" style="gap:8px;margin-top:8px">
+      <input id="searchInput" class="search" placeholder="Search titre/tags..." />
+      <button id="resetFilters" class="btn">Reset</button>
+    </div>
   </section>
-</main>
 
+  <main>
     <div id="grid" class="grid"></div>
     <p id="empty" class="empty" hidden>Tsisy produits.</p>
   </main>
@@ -38,14 +41,16 @@
     <form id="form" method="dialog">
       <div class="modal-header">
         <h3 id="modalTitle">Add product</h3>
-        <button type="button" id="closeBtn" class="icon-btn">✕</button>
+        <button type="button" id="closeBtn" class="icon-btn" aria-label="Close">✕</button>
       </div>
       <div class="modal-body">
         <div class="form-grid">
           <input type="hidden" name="id" />
+
           <label>Title
             <input name="title" required />
           </label>
+
           <label>Type
             <select name="type">
               <option value="ebook">eBook</option>
@@ -53,15 +58,19 @@
               <option value="app">App/Jeux</option>
             </select>
           </label>
+
           <label>Gratuit
             <input type="checkbox" name="isFree"/>
           </label>
+
           <label>Price
             <input type="number" step="0.01" min="0" name="price" value="0"/>
           </label>
+
           <label>Promo (%)
             <input type="number" min="0" max="100" name="promo" value="0"/>
           </label>
+
           <label>VIP
             <input type="checkbox" name="isVIP"/>
           </label>
@@ -91,9 +100,11 @@
               <option value="web">Web</option>
             </select>
           </label>
+
           <label>Version
             <input name="version" placeholder="1.0.0"/>
           </label>
+
           <label>Build #
             <input name="build_number" placeholder="100"/>
           </label>
@@ -110,6 +121,7 @@
           <label class="full">Description
             <textarea name="description" rows="3"></textarea>
           </label>
+
           <label class="full">Tags (comma separated)
             <input name="tags" placeholder="programming, react"/>
           </label>
@@ -122,12 +134,12 @@
     </form>
   </dialog>
 
-  <!-- Login Modal (ILAY TSY MAINTSY MISY) -->
+  <!-- Login Modal -->
   <dialog id="loginModal" class="modal">
     <form id="loginForm" method="dialog">
       <div class="modal-header">
         <h3>Owner Login</h3>
-        <button type="button" class="icon-btn" id="closeLogin">✕</button>
+        <button type="button" class="icon-btn" id="closeLogin" aria-label="Close">✕</button>
       </div>
       <div class="modal-body">
         <div class="form-grid">
@@ -149,7 +161,7 @@
     </form>
   </dialog>
 
-  <!-- Libs (Tsy ovaina filaharana) -->
+  <!-- Libs (filaharana tsy ovaina) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.6.82/pdf.min.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="./app-secure.js"></script>
