--- a/shop/index.html
+++ b/shop/index.html
@@ -46,7 +46,11 @@
       <div class="modal-body">
         <div class="form-grid">
           <input type="hidden" name="id" />
-          <label>Title <input name="title" required /></label>
+
+          <label>Title
+            <input name="title" required />
+          </label>
+
           <label>Type
             <select name="type">
               <option value="ebook">eBook</option>
@@ -54,22 +58,37 @@
               <option value="app">App/Jeux</option>
             </select>
           </label>
-          <label>Gratuit <input type="checkbox" name="isFree"/></label>
-          <label>Price <input type="number" step="0.01" min="0" name="price" value="0"/></label>
-          <label>Promo (%) <input type="number" min="0" max="100" name="promo" value="0"/></label>
-          <label>VIP <input type="checkbox" name="isVIP"/></label>
+
+          <label>Gratuit
+            <input type="checkbox" name="isFree"/>
+          </label>
+
+          <label>Price
+            <input type="number" step="0.01" min="0" name="price" value="0"/>
+          </label>
+
+          <label>Promo (%)
+            <input type="number" min="0" max="100" name="promo" value="0"/>
+          </label>
+
+          <label>VIP
+            <input type="checkbox" name="isVIP"/>
+          </label>
+
           <label class="full">Image (cover)
             <div class="inline">
               <input name="image_url" type="url" placeholder="Auto-filled rehefa upload"/>
               <input type="file" id="imageFile" accept="image/*"/>
             </div>
           </label>
+
           <label class="full">Media (Video/PDF)
             <div class="inline">
               <input name="media_url" type="url" placeholder="Auto-filled rehefa upload"/>
               <input type="file" id="mediaFile" accept="video/*,.pdf"/>
             </div>
           </label>
+
           <label>Platform (raha App)
             <select name="platform">
               <option value="">--</option>
@@ -81,8 +100,15 @@
               <option value="web">Web</option>
             </select>
           </label>
-          <label>Version <input name="version" placeholder="1.0.0"/></label>
-          <label>Build # <input name="build_number" placeholder="100"/></label>
+
+          <label>Version
+            <input name="version" placeholder="1.0.0"/>
+          </label>
+
+          <label>Build #
+            <input name="build_number" placeholder="100"/>
+          </label>
+
           <label class="full">App file (APK/ZIP/EXE/DMG…)
             <div class="inline">
               <input name="file_url" type="url" placeholder="Auto-filled rehefa upload"/>
@@ -91,8 +117,14 @@
             <input type="hidden" name="file_type"/>
             <input type="hidden" name="file_size"/>
           </label>
-          <label class="full">Description <textarea name="description" rows="3"></textarea></label>
-          <label class="full">Tags (comma separated) <input name="tags" placeholder="programming, react"/></label>
+
+          <label class="full">Description
+            <textarea name="description" rows="3"></textarea>
+          </label>
+
+          <label class="full">Tags (comma separated)
+            <input name="tags" placeholder="programming, react"/>
+          </label>
         </div>
       </div>
       <div class="modal-footer">
@@ -129,7 +161,7 @@
     </form>
   </dialog>
 
-  <!-- Libs -->
+  <!-- Libs (filaharana tsy ovaina) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.6.82/pdf.min.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="./app-secure.js"></script>
