--- a/shop/index.html
+++ b/shop/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
+  <!-- Top bar -->
   <header class="topbar">
     <h1>Mijoro Boutique</h1>
     <div class="actions">
@@ -15,6 +16,7 @@
     </div>
   </header>
 
+  <!-- Filters + search -->
   <section class="filters">
     <div class="chips">
       <button class="chip active" data-filter="all">All</button>
@@ -31,6 +33,7 @@
     </div>
   </section>
 
+  <!-- Products grid -->
   <main>
     <div id="grid" class="grid"></div>
     <p id="empty" class="empty" hidden>Tsisy produits.</p>
@@ -161,7 +164,7 @@
     </form>
   </dialog>
 
-  <!-- Libs (filaharana tsy ovaina) -->
+  <!-- Libs + App JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.6.82/pdf.min.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="./app-secure.js"></script>
