--- a/shop/index.html
+++ b/shop/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <!-- Top bar -->
   <header class="topbar">
     <h1>Mijoro Boutique</h1>
     <div class="actions">
@@ -16,7 +15,6 @@
     </div>
   </header>
 
-  <!-- Filters + search -->
   <section class="filters">
     <div class="chips">
       <button class="chip active" data-filter="all">All</button>
@@ -33,7 +31,6 @@
     </div>
   </section>
 
-  <!-- Products grid -->
   <main>
     <div id="grid" class="grid"></div>
     <p id="empty" class="empty" hidden>Tsisy produits.</p>
@@ -164,7 +161,7 @@
     </form>
   </dialog>
 
-  <!-- Libs + App JS -->
+  <!-- Libs (filaharana tsy ovaina) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.6.82/pdf.min.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="./app-secure.js"></script>
