--- a/shop/index.html
+++ b/shop/index.html
@@ -161,7 +161,7 @@
     </form>
   </dialog>
 
-  <!-- Libs -->
+  <!-- Libs & App JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.6.82/pdf.min.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="./app-secure.js"></script>
