--- a/shop/index.html
+++ b/shop/index.html
@@ -1,169 +1,105 @@
 <!DOCTYPE html>
-<html lang="mg">
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mijoro Boutique</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mijoro Boutique — Gestion Produits</title>
+
+  <!-- STYLE PRINCIPAL -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- SUPABASE -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 </head>
 <body>
+  <!-- 🔝 BARRE DU HAUT -->
   <header class="topbar">
     <h1>Mijoro Boutique</h1>
     <div class="actions">
-      <button id="loginBtn" class="btn">🔒 Login</button>
-      <button id="addBtn" class="btn primary" hidden>+ Add product</button>
+      <button id="login-btn" class="btn primary">Se connecter</button>
+      <button id="logout-btn" class="btn danger" style="display:none;">Se déconnecter</button>
     </div>
   </header>
 
+  <!-- 🔍 FILTRES -->
   <section class="filters">
-    <div class="chips">
-      <button class="chip active" data-filter="all">All</button>
-      <button class="chip" data-filter="ebook">eBook</button>
-      <button class="chip" data-filter="video">Video</button>
-      <button class="chip" data-filter="app">App/Jeux</button>
-      <button class="chip" data-filter="free">Gratuit</button>
-      <button class="chip" data-filter="promo">Promo</button>
-      <button class="chip" data-filter="vip">VIP</button>
-    </div>
-    <div class="inline" style="gap:8px;margin-top:8px">
-      <input id="searchInput" class="search" placeholder="Search titre/tags..." />
-      <button id="resetFilters" class="btn">Reset</button>
-    </div>
+    <select id="filter-tag" class="search">
+      <option value="all">Tous les produits</option>
+      <option value="mode">Mode</option>
+      <option value="accessoire">Accessoires</option>
+      <option value="tech">Technologie</option>
+      <option value="maison">Maison</option>
+    </select>
   </section>
 
-  <main>
-    <div id="grid" class="grid"></div>
-    <p id="empty" class="empty" hidden>Tsisy produits.</p>
+  <!-- 🧱 LISTE DES PRODUITS -->
+  <main id="products-list" class="grid">
+    <p>Chargement des produits...</p>
   </main>
 
-  <!-- Modal Add/Edit Product -->
-  <dialog id="modal" class="modal">
-    <form id="form" method="dialog">
-      <div class="modal-header">
-        <h3 id="modalTitle">Add product</h3>
-        <button type="button" id="closeBtn" class="icon-btn" aria-label="Close">✕</button>
-      </div>
-      <div class="modal-body">
-        <div class="form-grid">
-          <input type="hidden" name="id" />
+  <!-- ➕ BOUTON AJOUTER PRODUIT -->
+  <div class="add-product-bar">
+    <button id="add-product-btn" class="btn primary">+ Ajouter un produit</button>
+  </div>
 
-          <label>Title
-            <input name="title" required />
-          </label>
-
-          <label>Type
-            <select name="type">
-              <option value="ebook">eBook</option>
-              <option value="video">Video</option>
-              <option value="app">App/Jeux</option>
-            </select>
-          </label>
-
-          <label>Gratuit
-            <input type="checkbox" name="isFree"/>
-          </label>
-
-          <label>Price
-            <input type="number" step="0.01" min="0" name="price" value="0"/>
-          </label>
-
-          <label>Promo (%)
-            <input type="number" min="0" max="100" name="promo" value="0"/>
-          </label>
-
-          <label>VIP
-            <input type="checkbox" name="isVIP"/>
-          </label>
-
-          <label class="full">Image (cover)
-            <div class="inline">
-              <input name="image_url" type="url" placeholder="Auto-filled rehefa upload"/>
-              <input type="file" id="imageFile" accept="image/*"/>
-            </div>
-          </label>
-
-          <label class="full">Media (Video/PDF)
-            <div class="inline">
-              <input name="media_url" type="url" placeholder="Auto-filled rehefa upload"/>
-              <input type="file" id="mediaFile" accept="video/*,.pdf"/>
-            </div>
-          </label>
-
-          <label>Platform (raha App)
-            <select name="platform">
-              <option value="">--</option>
-              <option value="android">Android</option>
-              <option value="ios">iOS</option>
-              <option value="windows">Windows</option>
-              <option value="mac">macOS</option>
-              <option value="linux">Linux</option>
-              <option value="web">Web</option>
-            </select>
-          </label>
-
-          <label>Version
-            <input name="version" placeholder="1.0.0"/>
-          </label>
-
-          <label>Build #
-            <input name="build_number" placeholder="100"/>
-          </label>
-
-          <label class="full">App file (APK/ZIP/EXE/DMG…)
-            <div class="inline">
-              <input name="file_url" type="url" placeholder="Auto-filled rehefa upload"/>
-              <input type="file" id="appFile" />
-            </div>
-            <input type="hidden" name="file_type"/>
-            <input type="hidden" name="file_size"/>
-          </label>
-
-          <label class="full">Description
-            <textarea name="description" rows="3"></textarea>
-          </label>
-
-          <label class="full">Tags (comma separated)
-            <input name="tags" placeholder="programming, react"/>
-          </label>
+  <!-- 🪪 MODAL LOGIN -->
+  <dialog id="login-modal" class="modal">
+    <div class="modal-header">
+      <h2>Connexion</h2>
+      <button id="close-login" class="icon-btn">✖</button>
+    </div>
+    <div class="modal-body">
+      <form id="login-form">
+        <label>Email
+          <input type="email" id="login-email" required />
+        </label>
+        <label>Mot de passe
+          <input type="password" id="login-password" required />
+        </label>
+        <div class="modal-footer">
+          <button type="submit" class="btn primary">Connexion</button>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn primary">Save</button>
-        <button type="button" class="btn" id="cancelBtn">Cancel</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </dialog>
 
-  <!-- Login Modal -->
-  <dialog id="loginModal" class="modal">
-    <form id="loginForm" method="dialog">
-      <div class="modal-header">
-        <h3>Owner Login</h3>
-        <button type="button" class="icon-btn" id="closeLogin" aria-label="Close">✕</button>
-      </div>
-      <div class="modal-body">
-        <div class="form-grid">
-          <label class="full">Email
-            <input id="loginEmail" type="email" placeholder="joroandriamanirisoa13@gmail.com" required />
-          </label>
-          <label class="full">Password
-            <input id="loginPass" type="password" placeholder="••••••••" required />
-          </label>
+  <!-- 🧾 MODAL AJOUT PRODUIT -->
+  <dialog id="product-modal" class="modal">
+    <div class="modal-header">
+      <h2>Ajouter un produit</h2>
+      <button id="close-modal" class="icon-btn">✖</button>
+    </div>
+    <div class="modal-body">
+      <form id="product-form" class="form-grid">
+        <label>
+          Nom du produit
+          <input type="text" id="name" required />
+        </label>
+        <label>
+          Prix (Ar)
+          <input type="number" id="price" required />
+        </label>
+        <label>
+          Catégorie / Tag
+          <input type="text" id="tag" placeholder="ex: mode, tech..." />
+        </label>
+        <label class="full">
+          Lien Preview (image, vidéo ou PDF)
+          <input type="url" id="preview" placeholder="https://..." />
+        </label>
+        <label class="full">
+          Description
+          <textarea id="description" rows="3"></textarea>
+        </label>
+        <div class="modal-footer">
+          <button type="submit" class="btn primary">💾 Enregistrer</button>
+          <button type="button" id="cancel-product" class="btn">Annuler</button>
         </div>
-        <p class="hint" style="color:#94a3b8;font-size:12px;margin-top:8px">
-          Owner ihany no mahazo miditra.
-        </p>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn primary">Login</button>
-        <button type="button" class="btn" id="cancelLogin">Cancel</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </dialog>
 
-  <!-- Libs (tsy ovaina) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.6.82/pdf.min.js"></script>
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  <script src="./app-secure.js"></script>
+  <!-- ⚙️ SCRIPT PRINCIPAL -->
+  <script src="app-secure.js"></script>
 </body>
 </html>
