--- a/shop/index.html
+++ b/shop/index.html
@@ -292,15 +292,16 @@
 <body>
     <div class="header">
         <div class="container">
-            <div class="auth-section">
-                <div id="userInfo" class="user-info"></div>
-                <button id="githubLogin" class="btn btn-primary" onclick="signInWithGitHub()">
-                    🔗 Login with GitHub
-                </button>
-                <button id="logoutBtn" class="btn btn-secondary hidden" onclick="signOut()">
-                    🚪 Logout
-                </button>
-            </div>
+          <!-- ITO NY CODE VAOVAO AMPIDIRINA -->
+<div class="auth-section">
+    <div id="userInfo" class="user-info"></div>
+    <button id="loginBtn" class="btn btn-primary" onclick="showLoginForm()">
+        📧 Login with Email
+    </button>
+    <button id="logoutBtn" class="btn btn-secondary hidden" onclick="signOut()">
+        🚪 Logout
+    </button>
+</div>
         </div>
     </div>
 
