--- a/shop/index.html
+++ b/shop/index.html
@@ -401,7 +401,51 @@
             <p class="text-secondary">Please login with GitHub to manage your products</p>
         </div>
     </div>
+<!-- Login Modal -->
+<div id="loginModal" class="modal hidden">
+    <div class="modal-content">
+        <h3>Login with Email</h3>
+        <div class="form-group">
+            <label class="form-label">Email</label>
+            <input type="email" id="loginEmail" class="form-input" placeholder="joroandriamanirisoa13@gmail.com">
+        </div>
+        <div class="form-group">
+            <label class="form-label">Password</label>
+            <input type="password" id="loginPassword" class="form-input" placeholder="Your password">
+        </div>
+        <div class="form-actions">
+            <button class="btn btn-primary" onclick="loginWithEmail()">Login</button>
+            <button class="btn btn-secondary" onclick="hideLoginForm()">Cancel</button>
+        </div>
+        <p class="text-center">
+            Don't have an account? <a href="#" onclick="showSignupForm()">Sign up</a>
+        </p>
+    </div>
+</div>
 
+<!-- Signup Modal -->
+<div id="signupModal" class="modal hidden">
+    <div class="modal-content">
+        <h3>Create Account</h3>
+        <div class="form-group">
+            <label class="form-label">Email</label>
+            <input type="email" id="signupEmail" class="form-input" placeholder="joroandriamanirisoa13@gmail.com">
+        </div>
+        <div class="form-group">
+            <label class="form-label">Password</label>
+            <input type="password" id="signupPassword" class="form-input" placeholder="Minimum 6 characters">
+        </div>
+        <div class="form-actions">
+            <button class="btn btn-primary" onclick="signUpWithEmail()">Sign Up</button>
+            <button class="btn btn-secondary" onclick="hideSignupForm()">Cancel</button>
+        </div>
+        <p class="text-center">
+            Already have an account? <a href="#" onclick="showLoginForm()">Login</a>
+        </p>
+    </div>
+</div>
+
+<script src="app-secure.js"></script>
     <script src="app-secure.js"></script>
 </body>
 </html>
