--- a/shop/index.html
+++ b/shop/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Manager - Shop</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- PDF.js pour la prévisualisation PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
     <style>
         :root {
             --primary-color: #2563eb;
@@ -17,7 +19,11 @@
             --success-color: #10b981;
             --error-color: #ef4444;
             --warning-color: #f59e0b;
+            --vip-color: #f59e0b;
+            --free-color: #10b981;
+            --premium-color: #8b5cf6;
             --shadow: 0 1px 3px rgba(0,0,0,0.1);
+            --shadow-lg: 0 20px 25px -5px rgba(0,0,0,0.1);
         }
 
         * {
@@ -124,7 +130,7 @@
             border-radius: 20px;
             padding: 2rem;
             margin: 2rem auto;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+            box-shadow: var(--shadow-lg);
             border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
@@ -133,7 +139,7 @@
             background: white;
             padding: 2.5rem;
             border-radius: 16px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+            box-shadow: var(--shadow-lg);
             margin: 2rem 0;
             border: 1px solid var(--border-color);
         }
@@ -194,10 +200,10 @@
             margin-bottom: 0.5rem;
         }
 
-        /* Products Grid */
+        /* Products Grid - DESIGN MODERNE */
         .products-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
             gap: 2rem;
             margin: 3rem 0;
         }
@@ -205,12 +211,13 @@
         .product-card {
             background: white;
             border: 1px solid var(--border-color);
-            border-radius: 16px;
-            padding: 2rem;
+            border-radius: 20px;
+            padding: 0;
             box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            transition: all 0.3s ease;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             position: relative;
             overflow: hidden;
+            cursor: pointer;
         }
 
         .product-card::before {
@@ -219,13 +226,24 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary-color), var(--success-color));
+            height: 6px;
+            background: linear-gradient(90deg, var(--primary-color), var(--success-color), var(--vip-color));
+            background-size: 200% 100%;
+            animation: gradientShift 3s ease infinite;
+        }
+
+        @keyframes gradientShift {
+            0%, 100% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
         }
 
         .product-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.15);
+        }
+
+        .product-card-content {
+            padding: 2rem;
         }
 
         .product-header {
@@ -236,48 +254,144 @@
         }
 
         .product-title {
-            font-size: 1.4rem;
-            font-weight: 700;
+            font-size: 1.5rem;
+            font-weight: 800;
             color: var(--text-primary);
             margin-bottom: 0.5rem;
             line-height: 1.3;
+            background: linear-gradient(135deg, var(--text-primary), var(--primary-color));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .product-price {
-            font-size: 1.8rem;
-            font-weight: 700;
+            font-size: 2rem;
+            font-weight: 800;
             color: var(--primary-color);
             text-shadow: 0 2px 4px rgba(37, 99, 235, 0.1);
         }
 
-        .product-platform {
-            display: inline-block;
-            background: linear-gradient(135deg, var(--primary-color), #7c3aed);
+        /* Badges Stylés avec Icônes */
+        .badges-container {
+            display: flex;
+            gap: 0.5rem;
+            margin: 1rem 0;
+            flex-wrap: wrap;
+        }
+
+        .badge {
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            padding: 0.5rem 1rem;
+            border-radius: 25px;
+            font-size: 0.8rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            transition: all 0.3s ease;
+        }
+
+        .badge:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+        }
+
+        .badge-vip {
+            background: linear-gradient(135deg, #f59e0b, #d97706);
             color: white;
-            padding: 0.4rem 1rem;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .badge-free {
+            background: linear-gradient(135deg, #10b981, #059669);
+            color: white;
+        }
+
+        .badge-premium {
+            background: linear-gradient(135deg, #8b5cf6, #7c3aed);
+            color: white;
+        }
+
+        .badge-promo {
+            background: linear-gradient(135deg, #f97316, #ea580c);
+            color: white;
+        }
+
+        .badge-ebook {
+            background: linear-gradient(135deg, #a855f7, #9333ea);
+            color: white;
+        }
+
+        .badge-video {
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            color: white;
+        }
+
+        .badge-app {
+            background: linear-gradient(135deg, #3b82f6, #2563eb);
+            color: white;
+        }
+
+        .badge-platform {
+            background: var(--surface-color);
+            color: var(--text-primary);
+            border: 1px solid var(--border-color);
         }
 
         .product-meta {
-            margin: 1rem 0;
-            padding: 1rem;
+            margin: 1.5rem 0;
+            padding: 1.5rem;
             background: var(--surface-color);
-            border-radius: 12px;
+            border-radius: 16px;
+            border-left: 4px solid var(--primary-color);
         }
 
         .product-meta p {
             margin: 0.5rem 0;
             font-size: 0.9rem;
             color: var(--text-secondary);
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         .product-actions {
             display: flex;
             gap: 0.75rem;
             margin-top: 1.5rem;
+            padding-top: 1.5rem;
+            border-top: 1px solid var(--border-color);
+        }
+
+        /* Preview Sections */
+        .preview-section {
+            margin-top: 1.5rem;
+            border: 1px solid var(--border-color);
+            border-radius: 12px;
+            overflow: hidden;
+        }
+
+        .preview-header {
+            background: var(--surface-color);
+            padding: 1rem;
+            border-bottom: 1px solid var(--border-color);
+            font-weight: 600;
+        }
+
+        .preview-content {
+            padding: 1rem;
+            max-height: 400px;
+            overflow: auto;
+        }
+
+        .pdf-preview, .video-preview {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        .video-preview {
+            max-height: 300px;
         }
 
         /* File Upload */
@@ -451,6 +565,10 @@
             .product-form {
                 padding: 1.5rem;
             }
+
+            .product-card-content {
+                padding: 1.5rem;
+            }
         }
 
         @media (max-width: 480px) {
@@ -461,10 +579,6 @@
             .btn {
                 padding: 0.6rem 1.2rem;
                 font-size: 0.9rem;
-            }
-
-            .product-card {
-                padding: 1.5rem;
             }
 
             .file-upload {
@@ -646,14 +760,15 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="form-label">Platform *</label>
-                            <select id="productPlatform" class="form-select" required>
-                                <option value="">Select Platform</option>
+                            <label class="form-label">Platform <span class="text-sm text-secondary">(Required for App/Jeux only)</span></label>
+                            <select id="productPlatform" class="form-select">
+                                <option value="">Select Platform (Optional for eBook/Video)</option>
                                 <option value="android">Android</option>
                                 <option value="ios">iOS</option>
                                 <option value="windows">Windows</option>
                                 <option value="mac">Mac OS</option>
                                 <option value="web">Web</option>
+                                <option value="multi">Multi-platform</option>
                             </select>
                         </div>
 
@@ -698,7 +813,7 @@
                         <label class="form-label">Product Image</label>
                         <div class="file-upload" onclick="document.getElementById('productImage').click()">
                             <p>📁 Click to upload image or drag & drop</p>
-                            <p class="text-sm">PNG, JPG, GIF up to 10MB</p>
+                            <p class="text-sm">PNG, JPG, GIF, WEBP up to 500MB</p>
                             <input type="file" id="productImage" class="hidden" accept="image/*">
                         </div>
                         <div id="imagePreview" class="upload-preview hidden"></div>
@@ -708,10 +823,16 @@
                         <label class="form-label">Product File</label>
                         <div class="file-upload" onclick="document.getElementById('productFile').click()">
                             <p>📦 Click to upload file or drag & drop</p>
-                            <p class="text-sm">ZIP, APK, IPA up to 50MB</p>
-                            <input type="file" id="productFile" class="hidden" accept=".zip,.apk,.ipa,.pdf,.mp4">
+                            <p class="text-sm">ZIP, APK, IPA, EXE, ISO, PDF, MP4, MP3, AVI up to 500MB</p>
+                            <input type="file" id="productFile" class="hidden" accept=".zip,.apk,.ipa,.exe,.iso,.pdf,.mp4,.mp3,.avi,.mkv,.mov,.wmv">
                         </div>
                         <div id="filePreview" class="upload-preview"></div>
+                    </div>
+
+                    <!-- Preview Section -->
+                    <div id="previewSection" class="preview-section hidden">
+                        <div class="preview-header">Preview</div>
+                        <div id="previewContent" class="preview-content"></div>
                     </div>
 
                     <div class="product-actions">
